<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_BinderState" Id="{80b3a8a8-fb86-4d25-bb2c-e9acb8ffdc02}">
    <Declaration><![CDATA[TYPE ST_BinderState :
STRUCT
	DoorOpenOK  	AT %I*: BOOL;
	EstopOK  		AT %I*: BOOL;
	NetReset		AT %I*: BOOL;
	VlvBankPower 	AT %I*: BOOL;
	DumpValve 		AT %I*: BOOL;
	SystemEstopOK	AT %I*: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>