<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_ToBinder" Id="{eb70b1a4-5dbb-48c7-a398-62ac1296fc88}">
    <Declaration><![CDATA[TYPE ST_ToBinder :
STRUCT
	ProductHeld : BOOL;
	StatusSingulator : UINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>